--- a/pages/9705.html
+++ b/pages/9705.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4114/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,13 +311,13 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#applications_and_examples'>Applications and examples</a></li><li><a href='#general_methods'>General methods</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>p: X\to B</annotation></semantics></math> be a smooth <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundle</a> and the space <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup></mrow><annotation encoding='application/x-tex'>X^{(r)}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi></mrow><annotation encoding='application/x-tex'>r</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/jet+bundle'>jets</a> of <a class='existingWikiWord' href='/nlab/show/section'>sections</a> of <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>; there is an induced <a class='existingWikiWord' href='/nlab/show/projection'>projection</a> <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>X^{(r)}\to B</annotation></semantics></math> which makes it into a smooth bundle.</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>p: X\to B</annotation></semantics></math> be a smooth <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundle</a> and the space <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup></mrow><annotation encoding='application/x-tex'>X^{(r)}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi></mrow><annotation encoding='application/x-tex'>r</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/jet+bundle'>jets</a> of <a class='existingWikiWord' href='/nlab/show/section'>sections</a> of <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>; there is an induced <a class='existingWikiWord' href='/nlab/show/projection'>projection</a> <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>X^{(r)}\to B</annotation></semantics></math> which makes it into a smooth bundle.</p>
 
-<p>One considers a fixed partial differential relation (see <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>) which is a subset <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>⊂</mo><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup></mrow><annotation encoding='application/x-tex'>R\subset X^{(r)}</annotation></semantics></math>. One is interested in finding <a class='existingWikiWord' href='/nlab/show/formal+geometry'>formal</a> sections <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi></mrow><annotation encoding='application/x-tex'>s</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>X^{(r)}\to B</annotation></semantics></math> whose image is in <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>, and which are, in addition, <strong>holonomic sections</strong>, i.e. equal to the <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi></mrow><annotation encoding='application/x-tex'>r</annotation></semantics></math>-jet <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>J</mi> <mi>f</mi> <mi>r</mi></msubsup></mrow><annotation encoding='application/x-tex'>J_f^r</annotation></semantics></math> of a <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mi>r</mi></msup></mrow><annotation encoding='application/x-tex'>C^r</annotation></semantics></math>-section <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>p:X\to B</annotation></semantics></math>. One says that <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> satisfies the <strong>h-principle</strong> if every formal section of <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> is homotopic to a holonomic section within the appropriate topological space of formal sections.</p>
+<p>One considers a fixed partial differential relation (see <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>) which is a subset <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>⊂</mo><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup></mrow><annotation encoding='application/x-tex'>R\subset X^{(r)}</annotation></semantics></math>. One is interested in finding <a class='existingWikiWord' href='/nlab/show/formal+geometry'>formal</a> sections <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi></mrow><annotation encoding='application/x-tex'>s</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mrow><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow></msup><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>X^{(r)}\to B</annotation></semantics></math> whose image is in <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>, and which are, in addition, <strong>holonomic sections</strong>, i.e. equal to the <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi></mrow><annotation encoding='application/x-tex'>r</annotation></semantics></math>-jet <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>J</mi> <mi>f</mi> <mi>r</mi></msubsup></mrow><annotation encoding='application/x-tex'>J_f^r</annotation></semantics></math> of a <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mi>r</mi></msup></mrow><annotation encoding='application/x-tex'>C^r</annotation></semantics></math>-section <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>p:X\to B</annotation></semantics></math>. One says that <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> satisfies the <strong>h-principle</strong> if every formal section of <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> is homotopic to a holonomic section within the appropriate topological space of formal sections.</p>
 
 <h2 id='applications_and_examples'>Applications and examples</h2>
 
-<p>For example, in the case of holomorphic fiber bundles <math class='maruku-mathml' display='inline' id='mathml_5dab4bcea30c6616c8a018348a2b2ea9717ebd81_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> may be the Cauchy-Riemann relation, thus the question is if there is a deformation of a continuous section into a holomorphic one. In other words, one wants to reduce the problem of existence of maps of certain type to the analogous topological problem. Applications include results on the spaces of immersions, submersions, k-mersions, holomorphic maps, symplectic and isometric embeddings, contact structures and so on.</p>
+<p>For example, in the case of holomorphic fiber bundles <math class='maruku-mathml' display='inline' id='mathml_014a60004fe871690150cb7c117b02a23634f11d_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> may be the Cauchy-Riemann relation, thus the question is if there is a deformation of a continuous section into a holomorphic one. In other words, one wants to reduce the problem of existence of maps of certain type to the analogous topological problem. Applications include results on the spaces of immersions, submersions, k-mersions, holomorphic maps, symplectic and isometric embeddings, contact structures and so on.</p>
 
 <h2 id='general_methods'>General methods</h2>
 
@@ -358,7 +357,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/John+Francis'>John Francis</a>, <em><a href='http://www1.math.northwestern.edu/~jnkf/classes/hprin/'>The h-principle in topology</a></em> (overview <a href='http://math.northwestern.edu/~jnkf/classes/hprin/1overview.pdf'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/John+Francis'>John Francis</a>, <em><a href='http://sites.math.northwestern.edu/~jnkf/classes/hprin/'>The h-principle in topology</a></em> (overview <a href='http://sites.math.northwestern.edu/~jnkf/classes/hprin/1overview.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -375,19 +374,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 24, 2017 09:47:33 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (84.63.65.197)
+  <p>
+  Last revised on July 20, 2018 at 01:52:28.
+  See the <a href="https://ncatlab.org/nlab/history/h-principle" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/h-principle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/h-principle/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/h-principle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/h-principle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/h-principle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/h-principle/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/h-principle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/h-principle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/h-principle/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/h-principle" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/h-principle" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/h-principle" id="view_source" rel="nofollow">Source</a>
