--- a/pages/5241.html
+++ b/pages/5241.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,23 +311,39 @@ margin-left: 0em;
 <li><a href='http://www.math.uni-bremen.de/~porst/'>website</a></li>
 </ul>
 
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_0e6f8bf9f7145212d46bf864d001d2222ac2941e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/duality'>duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand+duality'>Gelfand duality</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on November 18, 2010 21:33:15 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (87.212.203.135)
+  <p>
+  Last revised on July 22, 2018 at 15:52:57.
+  See the <a href="https://ncatlab.org/nlab/history/Hans Porst" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hans+Porst" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Hans+Porst" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hans+Porst/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Hans+Porst" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hans+Porst" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Hans Porst/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Hans+Porst" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Hans+Porst" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Hans+Porst" id="view_source" rel="nofollow">Source</a>
